# currency/server/currency.go
@@ -1,25 +1,156 @@
+/*
+ * @Author: XPectuer
+ * @LastEditor: XPectuer
+ */
+/*
+ * @Author: XPectuer
+ * @LastEditor: XPectuer
+ */
+/*
+ * @Author: XPectuer
+ * @LastEditor: XPectuer
+ */
 package server
 
 import (
 	"context"
+	"io"
+	"time"
 
+	"github.com/Xpectuer/micro-service/currency/data"
 	protos "github.com/Xpectuer/micro-service/currency/protos/currency"
-
-	hclog "github.com/hashicorp/go-hclog"
+	"github.com/hashicorp/go-hclog"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
 )
 
-// Currency something
+/*
+ * @Author: XPectuer
+ * @LastEditor: XPectuer
+ */
+
+// Currency is a gRPC server it implements the methods defined by the CurrencyServer interface
 type Currency struct {
-	log hclog.Logger
+	rates         *data.ExchangeRates
+	log           hclog.Logger
+	subscriptions map[protos.Currency_SubscribeRatesServer][]*protos.RateRequest
 }
 
-// NewCurrency something
-func NewCurrency(l hclog.Logger) *Currency {
-	return &Currency{l}
+// NewCurrency creates a new Currency server
+func NewCurrency(r *data.ExchangeRates, l hclog.Logger) *Currency {
+	c := &Currency{r, l, make(map[protos.Currency_SubscribeRatesServer][]*protos.RateRequest)}
+	go c.handleUpdates()
+
+	return c
 }
 
-// GetRate something
+func (c *Currency) handleUpdates() {
+	// blocks when there is no update
+	ru := c.rates.MonitorRates(5 * time.Second)
+	for range ru {
+		c.log.Info("Got Updated rates")
+
+		// loop over subscribed clients
+		for k, v := range c.subscriptions {
+
+			// loop over subscribed rates
+			for _, rr := range v {
+				r, err := c.rates.GetRate(rr.GetBase().String(), rr.GetDestination().String())
+				if err != nil {
+					c.log.Error("Unable to get update rate", "base", rr.GetBase().String(), "destination", rr.GetDestination().String())
+				}
+
+				// create the response and send to the client
+				err = k.Send(&protos.StreamingRateResponse{
+					Message: &protos.StreamingRateResponse_RateResponse{
+						RateResponse: &protos.RateResponse{Base: rr.Base, Destination: rr.Destination, Rate: r},
+					},
+				})
+
+				if err != nil {
+					c.log.Error("Unable to send updated rate", "base", rr.GetBase().String(), "destination", rr.GetDestination().String())
+				}
+			}
+		}
+
+	}
+}
+
+// GetRate implements the CurrencyServer GetRate method and returns the currency exchange rate
+// for the two given currencies.
 func (c *Currency) GetRate(ctx context.Context, rr *protos.RateRequest) (*protos.RateResponse, error) {
-	c.log.Info("Handle GetRate", "base", rr.GetBase(), "destination", rr.GetDestination())
-	return &protos.RateResponse{Rate: 0.5}, nil
+	c.log.Info("Handle request for GetRate", "base", rr.GetBase(), "dest", rr.GetDestination())
+
+	// Validate parameters base currency can not be the same as destination
+	if rr.Base == rr.Destination {
+		// create the grpc error and return to the client
+		err := status.Errorf(
+			codes.InvalidArgument,
+			"Base rate %s can not be equal to destination rate %s",
+			rr.Base.String(),
+			rr.Destination.String(),
+		)
+
+		return nil, err
+	}
+
+	rate, err := c.rates.GetRate(rr.GetBase().String(), rr.GetDestination().String())
+	if err != nil {
+		return nil, err
+	}
+
+	return &protos.RateResponse{Base: rr.Base, Destination: rr.Destination, Rate: rate}, nil
+}
+
+// SubscribeRates implments the gRPC bidirection streaming method for the server
+func (c *Currency) SubscribeRates(src protos.Currency_SubscribeRatesServer) error {
+	// handle client messages
+	for {
+		rr, err := src.Recv() // Recv is a blocking method which returns on client data
+		// io.EOF signals that the client has closed the connection
+		if err == io.EOF {
+			c.log.Info("Client has closed connection")
+			break
+		}
+
+		// any other error means the transport between the server and client is unavailable
+		if err != nil {
+			c.log.Error("Unable to read from client", "error", err)
+			return err
+		}
+
+		c.log.Info("Handle client request", "request_base", rr.GetBase(), "request_dest", rr.GetDestination())
+
+		// get the current subscriptions for this client
+		rrs, ok := c.subscriptions[src]
+		if !ok {
+			rrs = []*protos.RateRequest{}
+		}
+
+		// check if already in the subscribe list and return a custom gRPC error
+		for _, r := range rrs {
+			// if we already have subscribe to this currency return an error
+			if r.Base == rr.Base && r.Destination == rr.Destination {
+				c.log.Error("Subscription already active", "base", rr.Base.String(), "dest", rr.Destination.String())
+
+				grpcError := status.New(codes.InvalidArgument, "Subscription already active for rate")
+				grpcError, err = grpcError.WithDetails(rr)
+				if err != nil {
+					c.log.Error("Unable to add metadata to error message", "error", err)
+					continue
+				}
+
+				// Can't return error as that will terminate the connection, instead must send an error which
+				// can be handled by the client Recv stream.
+				rrs := &protos.StreamingRateResponse_Error{Error: grpcError.Proto()}
+				src.Send(&protos.StreamingRateResponse{Message: rrs})
+			}
+		}
+
+		// all ok add to the collection
+		rrs = append(rrs, rr)
+		c.subscriptions[src] = rrs
+	}
+
+	return nil
 }
